# reveal

./: .dockerignore  .env.example  .env.local  .env.test  .gitignore  Dockerfile  README.md  architecture_overview.md  architecture_tech_stack.md  deploy.sh  docker-compose.yml  idea.md  ladder_scene_mapping.date_route.md  psychological_ladder.md  pyproject.toml  scenario_blueprint.date_route.fields.md  scenario_blueprint.date_route.json
alembic/: env.py
alembic/versions/: 20260316_000001_create_mvp_runtime_schema.py
docs/: generation_tone_guide.md  mvp_data_model.md  runtime_event_logging.md
src/idea_check_backend/: __init__.py  main.py  runtime_service.py
src/idea_check_backend/api/: dependencies.py  pair_flow_service.py  router.py
src/idea_check_backend/llm_service/: __init__.py  client.py  prompt_builder.py
src/idea_check_backend/observability/: __init__.py  runtime_events.py
src/idea_check_backend/persistence/: __init__.py  db.py  models.py  repository.py
src/idea_check_backend/scenario_engine/: __init__.py  blueprint_loader.py  service.py
src/idea_check_backend/shared_types/: __init__.py  health.py  scenario.py  scenario_blueprint.py  settings.py
src/idea_check_backend/smoke/: __init__.py  generate_scene.py
src/idea_check_backend/web_client/: app.js  index.html  styles.css
tests/: conftest.py  test_health.py  test_llm_service_client.py  test_mvp_schema.py  test_pair_flow_api.py  test_runtime_event_logging.py  test_runtime_repository.py  test_runtime_service.py  test_scenario_blueprint.py  test_smoke_generate_scene.py  test_web_client.py
(+4 files in other folders)
