[project]
name = "idea-check-backend"
version = "0.1.0"
description = "Backend skeleton for Idea Check service"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "alembic>=1.14.0,<2.0.0",
    "aiosqlite>=0.20.0,<1.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "greenlet>=3.1.1,<4.0.0",
    "httpx>=0.28.0,<1.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "sqlalchemy>=2.0.36,<3.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "ruff>=0.7.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/idea_check_backend"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
